добавил DTO